--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
-<h1 class="text-3xl font-bold underline">
-  Hello world!
-</h1>
+<div class="flex flex-col min-h-screen">
+  <app-header />
+  <main>
+    <router-outlet />
+  </main>
+</div>
