--- a/src/app/products/features/product-list/product-list.component.html
+++ b/src/app/products/features/product-list/product-list.component.html
@@ -2,23 +2,29 @@
 {{ productsState.state.status() }}
 
 <div class="mx-auto max-w-screen-xl">
-    @if(productsState.state.status() === 'loading') {
-        <p>Loading...</p>
-    } @else {
-        <div class="flex justify-end my-6">
-            <button 
-                (click)="changePage()"
-                type="button" 
-                class="text-white bg-green-500 hover:bg-green-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-green-600 dark:hover:bg-green-700 focus:outline-none dark:focus:ring-green-800"
-            >
-                Cambiar página
-            </button>
-        </div>
-        <div class="grid grid-cols-[repeat(4,300px)] gap-6">
-            @for(product of productsState.state().products; track product) {
-                <app-product-card class="block" [product]="product" />
-            } 
-            <div></div>
-        </div>
+    @switch (productsState.state.status()) {
+        @case ("loading") {
+            <p>Loading...</p>
+        }
+        @case ("error") {
+            <p>Error</p>
+        }
+        @default {
+            <div class="flex justify-end my-6">
+                <button 
+                    (click)="changePage()"
+                    type="button" 
+                    class="text-white bg-green-500 hover:bg-green-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-green-600 dark:hover:bg-green-700 focus:outline-none dark:focus:ring-green-800"
+                >
+                    Cambiar página
+                </button>
+            </div>
+            <div class="grid grid-cols-[repeat(4,300px)] gap-6">
+                @for(product of productsState.state().products; track product) {
+                    <app-product-card class="block" [product]="product" />
+                } 
+                <div></div>
+            </div>
+        }
     }
 </div>
