working on themes

--- a/src/app/products/features/product-detail/product-detail.component.html
+++ b/src/app/products/features/product-detail/product-detail.component.html
@@ -11,13 +11,13 @@
 
         <div class="mt-6 sm:mt-8 lg:mt-0">
             <h1
-            class="text-xl font-semibold text-gray-900 sm:text-2xl dark:text-white"
+            class="text-xl font-semibold text-gray-200 sm:text-2xl !dark:text-red-400"
             >
             {{ productDetailState.product()?.title }}
             </h1>
             <div class="mt-4 sm:items-center sm:gap-4 sm:flex">
             <p
-                class="text-2xl font-extrabold text-gray-900 sm:text-3xl dark:text-white"
+                class="text-2xl font-extrabold text-gray-300 sm:text-3xl dark:text-white"
             >
             {{ productDetailState.product()?.price | currency }}
             </p>
@@ -131,11 +131,11 @@
                 Add to favorites
             </a> -->
 
-            <a
-                href="#"
+            <button
                 title=""
                 class="text-white mt-4 sm:mt-0 bg-green-500 hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 dark:bg-primary-600 dark:hover:bg-primary-700 focus:outline-none dark:focus:ring-primary-800 flex items-center justify-center"
                 role="button"
+                (click)="addToCart()"
             >
                 <svg
                 class="w-5 h-5 -ms-2 me-2"
@@ -155,13 +155,13 @@
                 />
                 </svg>
 
-                Add to cart
-            </a>
+                Agregar al carrito
+            </button>
             </div>
 
             <hr class="my-6 md:my-8 border-gray-200 dark:border-gray-800" />
 
-            <p class="mb-6 text-gray-400 dark:text-gray-400">
+            <p class="mb-6 text-gray-300 dark:text-gray-300">
             {{productDetailState.product()?.description}}
             </p>
         </div>
