--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col min-h-screen">
+<div class="flex flex-col min-h-screen bg-green-100 dark:bg-gray-800">
   <app-header />
   <main>
     <router-outlet />
