--- a/src/app/products/ui/product-card/product-card.component.html
+++ b/src/app/products/ui/product-card/product-card.component.html
@@ -1,14 +1,14 @@
 
 <a [routerLink]="['/product', product().id]">
-    <div class="max-w-sm bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700">
+    <div class="max-w-sm bg-gray-200 border border-gray-500 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700">
         <picture href="#">
-            <img class="rounded-t-lg h-60 w-full object-contain object-center" [src]="product().image" alt="" />
+            <img class="rounded-t-lg h-60 w-full object-contain object-center mt-5" [src]="product().image" alt="" />
         </picture>
         <div class="p-5">
             <a href="#">
-                <h5 class="mb-2 text-xl font-bold tracking-tight text-gray-900 dark:text-white line-clamp-1">{{ product().title }}</h5>
+                <h5 class="mb-2 text-xl font-bold tracking-tight text-gray-300 dark:text-white line-clamp-1">{{ product().title }}</h5>
             </a>
-            <p class="mb-3 font-normal text-gray-700 dark:text-gray-400 line-clamp-3">{{ product().description }}</p>
+            <p class="mb-3 font-normal text-gray-400 dark:text-gray-400 line-clamp-3">{{ product().description }}</p>
             <div class="flex justify-end mt-6">
                 <button
                   class="inline-flex items-center gap-3 px-3 py-2 text-sm font-medium text-center text-white bg-green-600 rounded-lg hover:bg-green-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-blue-800"
