--- a/src/app/shared/ui/header/header.component.html
+++ b/src/app/shared/ui/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="border-gray-200 dark:bg-gray-900 border-b mb-8">
+<nav class="border-gray-200 dark:bg-gray-900 bg-green-300 border-b mb-8">
   <div
     class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4"
   >
@@ -9,7 +9,7 @@
         alt="Flowbite Logo"
       />
       <span
-        class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white"
+        class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white text-green-900"
         >NeurodiversityShop</span
       >
     </a>
@@ -39,14 +39,14 @@
     </button>
     <div class="hidden w-full md:block md:w-auto" id="navbar-default">
       <ul
-        class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 md:bg-gray-800 dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700"
+        class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 dark:border-gray-700"
       >
         <li>
           <a
             routerLink="/"
-            routerLinkActive="text-green-300 dark:text-green-300"
+            routerLinkActive="!text-green-900 dark:text-green-300"
             [routerLinkActiveOptions]="{ exact: true }"
-            class="block py-2 px-3 text-white rounded-sm hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-green-300 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent"
+            class="block py-2 px-3 dark:text-white text-green-600 rounded-sm hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-green-700 md:p-0 md:dark:hover:text-blue-500 dark:hover:bg-gray-700  md:dark:hover:bg-transparent"
             aria-current="page"
             >Productos</a
           >
@@ -54,13 +54,43 @@
         <li>
           <a
             routerLink="/cart"
-            routerLinkActive="text-green-300 dark:text-green-300"
+            routerLinkActive="!text-green-900 dark:text-green-300"
             [routerLinkActiveOptions]="{ exact: true }"
-            class="block py-2 px-3 text-white rounded-sm hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-green-300 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent"
+            class="block py-2 px-3 dark:text-white text-green-600 rounded-sm hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-green-700 md:p-0  md:dark:hover:text-blue-500 dark:hover:bg-gray-700  md:dark:hover:bg-transparent"
             >Carrito</a
           >
         </li>
       </ul>
+    </div>
+    <div>
+      <button class="relative">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="24"
+          height="24"
+          viewBox="0 0 24 24"
+          fill="none"
+          stroke="currentColor"
+          stroke-width="2"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          class="icon icon-tabler icons-tabler-outline icon-tabler-shopping-cart dark:text-white text-green-800"
+        >
+          <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+          <path d="M6 19m-2 0a2 2 0 1 0 4 0a2 2 0 1 0 -4 0" />
+          <path d="M17 19m-2 0a2 2 0 1 0 4 0a2 2 0 1 0 -4 0" />
+          <path d="M17 17h-11v-14h-2" />
+          <path d="M6 5l14 1l-1 7h-13" />
+        </svg>
+        @if(cartState.count() > 0 ) {
+          <span class="absolute bg-green-600 size-6 rounded-full flex items-center justify-center -right-2 -bottom-5">{{cartState.count()}}</span>
+        }
+      </button>
+    </div>
+    <div>
+      <button id="theme-toggle" class="p-2 border rounded" (click)="toggleTheme()">
+        Cambiar Modo
+      </button>
     </div>
   </div>
 </nav>
