--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,12 +1,3 @@
-/* You can add global styles to this file, and also import other style files */
 @import "tailwindcss";
 
-@layer base {
-    :root {
-      color-scheme: dark;
-    }
-  
-    body {
-      @apply bg-gray-800;
-    }
-  }
+@custom-variant dark (&:where(.dark, .dark *));
