--- a/src/app/cart/ui/cart-item/cart-item.component.html
+++ b/src/app/cart/ui/cart-item/cart-item.component.html
@@ -1,4 +1,4 @@
-<div class="rounded-lg border border-gray-600 bg-gray-700 p-4 shadow-sm dark:border-gray-700 dark:bg-gray-800 md:p-6">
+<div class="rounded-lg border border-green-400 dark:border-gray-600 bg-green-200 dark:bg-gray-700 p-4 shadow-sm dark:border-gray-700 dark:bg-gray-800 md:p-6">
     <div class="space-y-4 md:flex md:items-center md:justify-between md:gap-6 md:space-y-0">
       <a href="#" class="shrink-0 md:order-1">
         <img class="h-30 w-25" [src]="productCartItem().product.image" alt="imac image" />
@@ -11,7 +11,7 @@
             type="button" 
             id="decrement-button" 
             data-input-counter-decrement="counter-input" 
-            class="inline-flex h-5 w-5 shrink-0 items-center justify-center rounded-md border border-gray-300 bg-gray-100 hover:bg-gray-200 focus:outline-none focus:ring-2 focus:ring-gray-100 dark:border-gray-600 dark:bg-gray-700 dark:hover:bg-gray-600 dark:focus:ring-gray-700"
+            class="inline-flex cursor-pointer h-5 w-5 shrink-0 items-center justify-center rounded-md border border-gray-300 bg-gray-100 hover:bg-gray-200 focus:outline-none focus:ring-2 focus:ring-gray-100 dark:border-gray-600 dark:bg-gray-700 dark:hover:bg-gray-600 dark:focus:ring-gray-700"
             (click)="onDecrease.emit(productCartItem())"
           >
             <svg class="h-2.5 w-2.5 text-gray-900 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 18 2">
@@ -32,7 +32,7 @@
             type="button" 
             id="increment-button" 
             data-input-counter-increment="counter-input" 
-            class="inline-flex h-5 w-5 shrink-0 items-center justify-center rounded-md border border-gray-300 bg-gray-100 hover:bg-gray-200 focus:outline-none focus:ring-2 focus:ring-gray-100 dark:border-gray-600 dark:bg-gray-700 dark:hover:bg-gray-600 dark:focus:ring-gray-700"
+            class="inline-flex cursor-pointer h-5 w-5 shrink-0 items-center justify-center rounded-md border border-gray-300 bg-gray-100 hover:bg-gray-200 focus:outline-none focus:ring-2 focus:ring-gray-100 dark:border-gray-600 dark:bg-gray-700 dark:hover:bg-gray-600 dark:focus:ring-gray-700"
             (click)="onIncrease.emit(productCartItem())"
           >
             <svg class="h-2.5 w-2.5 text-gray-900 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 18 18">
@@ -41,17 +41,17 @@
           </button>
         </div>
         <div class="text-end md:order-4 md:w-32">
-          <p class="text-base font-bold text-gray-400 dark:text-white">{{productCartItem().product.price | currency }}</p>
+          <p class="text-base font-bold text-green-800 dark:text-white">{{productCartItem().product.price | currency }}</p>
         </div>
       </div>
 
       <div class="w-full min-w-0 flex-1 space-y-4 md:order-2 md:max-w-md">
-        <a href="#" class="text-base font-medium text-gray-300 hover:underline dark:text-white">{{ productCartItem().product.title }}</a>
+        <a href="#" class="text-base font-medium text-green-800 hover:underline dark:text-white">{{ productCartItem().product.title }}</a>
 
         <div class="flex items-center gap-4 mt-4">
           <button 
             type="button" 
-            class="inline-flex items-center text-sm font-medium text-red-600 hover:underline dark:text-red-500"
+            class="inline-flex items-center cursor-pointer text-sm font-medium text-red-600 hover:underline dark:text-red-500"
             (click)="onRemove.emit(productCartItem().product.id)"
           >
             <svg class="me-1.5 h-5 w-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
