--- a/src/app/shared/ui/header/header.component.html
+++ b/src/app/shared/ui/header/header.component.html
@@ -2,21 +2,10 @@
   <div
     class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4"
   >
-    <a href="/" class="flex items-center space-x-3 rtl:space-x-reverse">
-      <img
-        src="https://flowbite.com/docs/images/logo.svg"
-        class="h-8"
-        alt="Flowbite Logo"
-      />
-      <span
-        class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white text-green-900"
-        >NeurodiversityShop</span
-      >
-    </a>
     <button
       data-collapse-toggle="navbar-default"
       type="button"
-      class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
+      class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-green-800 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
       aria-controls="navbar-default"
       aria-expanded="false"
     >
@@ -37,6 +26,17 @@
         />
       </svg>
     </button>
+    <a href="/" class="flex items-center space-x-3 rtl:space-x-reverse">
+      <img
+        src="/img/logo.png"
+        class="h-8"
+        alt="Flowbite Logo"
+      />
+      <span
+        class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white text-green-900"
+        >NeuroDiv</span
+      >
+    </a>
     <div class="hidden w-full md:block md:w-auto" id="navbar-default">
       <ul
         class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 dark:border-gray-700"
@@ -44,9 +44,9 @@
         <li>
           <a
             routerLink="/"
-            routerLinkActive="!text-green-900 dark:text-green-300"
+            routerLinkActive="text-green-900 dark:text-green-300"
             [routerLinkActiveOptions]="{ exact: true }"
-            class="block py-2 px-3 dark:text-white text-green-600 rounded-sm hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-green-700 md:p-0 md:dark:hover:text-blue-500 dark:hover:bg-gray-700  md:dark:hover:bg-transparent"
+            class="block py-2 px-3 dark:text-white text-green-600 rounded-sm hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-green-700 md:p-0 md:dark:hover:text-green-500 dark:hover:bg-gray-700  md:dark:hover:bg-transparent"
             aria-current="page"
             >Productos</a
           >
@@ -54,9 +54,9 @@
         <li>
           <a
             routerLink="/cart"
-            routerLinkActive="!text-green-900 dark:text-green-300"
+            routerLinkActive="text-green-900 dark:text-green-300"
             [routerLinkActiveOptions]="{ exact: true }"
-            class="block py-2 px-3 dark:text-white text-green-600 rounded-sm hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-green-700 md:p-0  md:dark:hover:text-blue-500 dark:hover:bg-gray-700  md:dark:hover:bg-transparent"
+            class="block py-2 px-3 dark:text-white text-green-600 rounded-sm hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-green-700 md:p-0  md:dark:hover:text-green-500 dark:hover:bg-gray-700  md:dark:hover:bg-transparent"
             >Carrito</a
           >
         </li>
@@ -83,13 +83,14 @@
           <path d="M6 5l14 1l-1 7h-13" />
         </svg>
         @if(cartState.count() > 0 ) {
-          <span class="absolute bg-green-600 size-6 rounded-full flex items-center justify-center -right-2 -bottom-5">{{cartState.count()}}</span>
+          <span style="text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.3);" class="absolute dark:bg-green-600 bg-orange-400 shadow shadow-text size-6 rounded-full flex items-center justify-center -right-2 -bottom-5">{{cartState.count()}}</span>
         }
       </button>
     </div>
-    <div>
-      <button id="theme-toggle" class="p-2 border rounded" (click)="toggleTheme()">
-        Cambiar Modo
+    <div class="mr-3 text-green-700 dark:text-gray-100">
+      <button (click)="toggleTheme()" class="flex transition-transform hover:scale-125 cursor-pointer">
+        <span *ngIf="!darkMode()" class="material-icons">dark_mode</span>
+        <span *ngIf="darkMode()" class="material-icons">light_mode</span>
       </button>
     </div>
   </div>
